Add HTML content for the home page

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -2,26 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@font-face {
+	font-family: 'Source Serif';
+	src: url('/fonts/Source_Serif_4/SourceSerif4-VariableFont.ttf');
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+:root {
+	--blue: 0, 123, 255;
+	--meep: 255, 220, 0;
+	--black: 68, 68, 82;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+	color: rgb(var(--black));
+	font-family: 'Source Serif', serif;
 }
